# python-coffee-demo

./: README.md  pyproject.toml
src/: cli.py  io.py  report.py
tests/: test_cli.py  test_coffee_median.py
